Workaround git in BC
Unable to copy my python code with binary as bc build input.
I think this is due to it dosen't send up the .s2i file.

Recreate the issue with:
Works:
oc new-app python:3.6~https://github.com/NissesSenap/python_s2i_pipenv.git --name=something2

Don't work (don't forget to remove .git file if you try this):
oc new-app python:3.6~/<path-to-my-folder> --name=something3

--- a/.openshift/templates/build.yml
+++ b/.openshift/templates/build.yml
@@ -47,8 +47,9 @@ objects:
         kind: ImageStreamTag
         name: ${APPLICATION_NAME}:latest
     source:
-      binary: {}
-      type: Binary
+      git:
+        uri: https://github.com/NissesSenap/python_s2i_pipenv.git
+      type: Git
     strategy:
       sourceStrategy:
         from:
@@ -92,13 +93,12 @@ objects:
     - name: oc-binary-build 
       image: quay.io/openshift-pipeline/openshift-cli:latest
       command: ["/usr/local/bin/oc"]
+      workingDir: /workspace
       args:
         - start-build
         - -w
         - -F
         - ${APPLICATION_NAME}
-        - --from-dir
-        - "."
 - apiVersion: tekton.dev/v1alpha1
   kind: Pipeline
   metadata:
